assets/insurance/insurance-usecase-type-apigw-mgw/applications/points/virtualservices/destinations.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: points-destination
  namespace: insurance
spec:
  host: points # interpreted as reviews.foo.svc.cluster.local
  subsets:
  - name: v1.0
    labels:
      version: v1.0
  - name: v2.0
    labels:
      version: v2.0
