assets/insurance/insurance-usecase-type-apigw-mgw/applications/points/virtualservices/virtual-service-weighted.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: points-route
  namespace: insurance
spec:
  gateways:
  - mesh
  hosts:
  - points # interpreted as reviews.foo.svc.cluster.local
  http:
  - route:
    - destination:
        host: points # interpreted as reviews.foo.svc.cluster.local
        subset: v1.0
      weight: 90
    - destination:
        host: points # interpreted as reviews.foo.svc.cluster.local
        subset: v2.0
      weight: 10
